[package]
name = "wiki"
description = "Library for interacting with MediaWiki APIs"
repository = "https://github.com/fee1-dead/wiki"
license = "Apache-2.0 OR MIT"
version = "0.0.4"
edition = "2021"

[workspace]
members = ["wikiproc", "mwget", "scannerbot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "multipart", "gzip", "stream"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_json = "1"
url = "2"
thiserror = "1"
wikiproc = { path = "./wikiproc", version = "0.0.1" }
bytemuck = { version = "1", features = ["derive"] }
urlencoding = "2"
futures-util = { version = "0.3.21", features = ["io"] }
pin-project = "1.0.10"
bitflags = "1.3.2"
chrono = "0.4.19"
async-sse = "5.1.0"
http-types = "2.12.0"
tracing = "0.1.35"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
tokio = { version = "1", features = ["full"] }
criterion = "0.3.6"

[features]
default = ["reqwest/cookies"]

[[bench]]
name = "make_url"
harness = false

[profile.bench]
lto = "fat"
opt-level = 3
debug-assertions = false
