[package]
name = "abuselog_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
color-eyre = "0.6.2"
futures-util = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wiki = { path = "../" }
