[package]
name = "mwget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.3"
chrono = "0.4.19"
futures-util = "0.3.21"
lazy_static = "1.4.0"
fancy-regex = "0.13.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
tracing-timing = "0.6.0"
wiki = { path = "../" }
color-eyre = "0.6.2"
schemars = { version = "0.8.11", features = ["chrono"] }
