[package]
name = "wikilinks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
web-sys = "0.3.57"
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
reqwest = { version = "0.11.10" }
wasm-bindgen-futures = "0.4.30"
wiki = { path = "../", default-features = false }